Added Label Days Available: to the My Availability field set

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <p></p>
       <fieldset>
         <legend><strong>My Availability</strong></legend>
+        <p>
+          <label>Days Available:</label>
+        </p>
         <label><input type="checkbox" name="available_field[]" value="Sunday">Sunday</label><br/>
         <label><input type="checkbox" name="available_field[]" value="Monday">Monday</label><br/>
         <label><input type="checkbox" name="available_field[]" value="Tuesday">Tuesday</label><br>
